--- a/skills.src/applying-ruby-conventions/SKILL.md.erb
+++ b/skills.src/applying-ruby-conventions/SKILL.md.erb
@@ -1,10 +1,10 @@
 <%= skill(description: 'Applies idiomatic Ruby conventions, structure, and best practices when writing or modifying Ruby code. What this does is defining a set of rules to follow when dealing with any Ruby file. Use this when the user is asking to create, edit, refactor, or review Ruby files or when the project contains Ruby source code.') %>
 
-# <%= skill_goal 'Applying Ruby conventions' %>
+# <%= goal 'Applying Ruby conventions' %>
 
 ## Inform the user
 
-- <%= announce_skill %>
+- <%= announce %>
 
 ## Conventions to be followed with Ruby files
 
@@ -35,5 +35,5 @@ See [references/conventions-for-ruby-exceptions-handling.md](references/conventi
 ## When to use it
 
 - Always use it every time the user asks you to use Ruby conventions.
-- Always use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- Always use it every time another skill specifically mentions `skill: <%= name %>`.
 - Always use it every time you need to write or modify Ruby code.
