--- a/skills.src/applying-test-conventions/SKILL.md.erb
+++ b/skills.src/applying-test-conventions/SKILL.md.erb
@@ -1,10 +1,10 @@
 <%= skill(description: 'Applies idiomatic test conventions, structure, and best practices when writing or modifying unit tests. What this does is defining a set of rules to follow when dealing with any test file. Use this when the user is asking to create, edit, refactor, or review test files or when the project contains test scenarios.') %>
 
-# <%= skill_goal 'Applying test conventions' %>
+# <%= goal 'Applying test conventions' %>
 
 ## Inform the user
 
-- <%= announce_skill %>
+- <%= announce %>
 
 ## Conventions to be followed when testing
 
@@ -86,5 +86,5 @@ Those conventions use examples using Ruby, but are applicable to any programming
 ## When to use it
 
 - Always use it every time the user asks you to write or modify tests.
-- Always use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- Always use it every time another skill specifically mentions `skill: <%= name %>`.
 - Always use it every time you need to write or modify tests.
