--- a/skills.src/editing-files/SKILL.md.erb
+++ b/skills.src/editing-files/SKILL.md.erb
@@ -1,10 +1,10 @@
 <%= skill(description: 'Edits text files of any kind. What this does is defining a set of rules to follow when editing or creating any file. Use this when the user is asking to create or edit any file or when you need to create or edit files.') %>
 
-# <%= skill_goal 'Editing files' %>
+# <%= goal 'Editing files' %>
 
 ## Inform the user
 
-- <%= announce_skill %>
+- <%= announce %>
 
 ## Rules to be followed when editing files
 
@@ -24,5 +24,5 @@
 ## When to use it
 
 - Always use it every time the user asks you to create or edit a file.
-- Always use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- Always use it every time another skill specifically mentions `skill: <%= name %>`.
 - Always use it every time you need to create or edit a file.
