--- a/skills.src/analyzing-github-issue/SKILL.md.erb
+++ b/skills.src/analyzing-github-issue/SKILL.md.erb
@@ -35,12 +35,10 @@
   - Always analyze all the rules that you should adhere to when implementing a task.
 <% end -%>
 
-## When to use it
-
-- This skill can be used during Plan mode and is totally safe.
-- Always use it every time the user asks you to analyze a given GitHub issue.
-- Always use it every time another skill specifically mentions `skill: <%= name %>`.
-- Always use it every time you need to analyze a GitHub issue to gather requirements.
+<% when_to_use do -%>
+  - Always use it every time the user asks you to analyze a given GitHub issue.
+  - Always use it every time you need to analyze a GitHub issue to gather requirements.
+<% end -%>
 
 ## Usage and code examples
 
