--- a/skills.src/applying-ruby-conventions/SKILL.md.erb
+++ b/skills.src/applying-ruby-conventions/SKILL.md.erb
@@ -32,8 +32,7 @@ See [references/conventions-for-ruby-methods.md](references/conventions-for-ruby
 
 See [references/conventions-for-ruby-exceptions-handling.md](references/conventions-for-ruby-exceptions-handling.md)
 
-## When to use it
-
-- Always use it every time the user asks you to use Ruby conventions.
-- Always use it every time another skill specifically mentions `skill: <%= name %>`.
-- Always use it every time you need to write or modify Ruby code.
+<% when_to_use do -%>
+  - Always use it every time the user asks you to use Ruby conventions.
+  - Always use it every time you need to write or modify Ruby code.
+<% end -%>
