--- a/skills.src/committing-changes/SKILL.md.erb
+++ b/skills.src/committing-changes/SKILL.md.erb
@@ -49,11 +49,10 @@
   ```
   <% end -%>
 
-## When to use it
-
-- Always use it every time the user asks you to commit your changes.
-- Always use it every time another skill specifically mentions `skill: <%= name %>`.
-- Always use it every time you need to commit your changes.
+<% when_to_use do -%>
+  - Always use it every time the user asks you to commit your changes.
+  - Always use it every time you need to commit your changes.
+<% end -%>
 
 ## Usage and code examples
 
