--- a/skills.src/creating-pull-request/SKILL.md.erb
+++ b/skills.src/creating-pull-request/SKILL.md.erb
@@ -60,11 +60,10 @@
   ```
   <% end -%>
 
-## When to use it
-
-- Always use it every time the user asks you to create a Pull Request.
-- Always use it every time another skill specifically mentions `skill: <%= name %>`.
-- Always use it every time you need to create a Pull Request.
+<% when_to_use do -%>
+  - Always use it every time the user asks you to create a Pull Request.
+  - Always use it every time you need to create a Pull Request.
+<% end -%>
 
 ## Usage and code examples
 
