--- a/skills.src/updating-doc/SKILL.md.erb
+++ b/skills.src/updating-doc/SKILL.md.erb
@@ -72,11 +72,10 @@
   ```
 <% end -%>
 
-## When to use it
-
-- Always use it every time the user asks you to update documentation.
-- Always use it every time another skill specifically mentions `skill: <%= name %>`.
-- Use it every time you think documentation should be updated after implementing some changes in the code or tests.
+<% when_to_use do -%>
+  - Always use it every time the user asks you to update documentation.
+  - Use it every time you think documentation should be updated after implementing some changes in the code or tests.
+<% end -%>
 
 ## Usage and code examples
 
