--- a/skills.src/validating-production-quality/SKILL.md.erb
+++ b/skills.src/validating-production-quality/SKILL.md.erb
@@ -52,11 +52,10 @@
   ```
 <% end -%>
 
-## When to use it
-
-- Always use it every time the user asks you to validate production quality gates.
-- Always use it every time another skill specifically mentions `skill: <%= name %>`.
-- Always use it just before attempting completion of a task that is a full production-grade feature or bug fix.
+<% when_to_use do -%>
+  - Always use it every time the user asks you to validate production quality gates.
+  - Always use it just before attempting completion of a task that is a full production-grade feature or bug fix.
+<% end -%>
 
 ## Usage and code examples
 
