--- a/skills.src/syncing-branch-with-base/SKILL.md.erb
+++ b/skills.src/syncing-branch-with-base/SKILL.md.erb
@@ -44,11 +44,10 @@
   ```
 <% end -%>
 
-## When to use it
-
-- Always use it every time the user asks you to sync the branch with its base.
-- Always use it every time another skill specifically mentions `skill: <%= name %>`.
-- Use it every time you realize the base branch has divereged and you want to get the current branch up-to-date with its base.
+<% when_to_use do -%>
+  - Always use it every time the user asks you to sync the branch with its base.
+  - Use it every time you realize the base branch has divereged and you want to get the current branch up-to-date with its base.
+<% end -%>
 
 ## Usage and code examples
 
